[metadata]
name = networking-ucsm-bm
summary = Neutron ML2 driver for Cisco UCSM managing bare metal servers
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    networking-ucsm-bm

[compile_catalog]
directory = networking-ucsm-bm/locale
domain = networking-ucsm-bm

[update_catalog]
domain = networking-ucsm-bm
output_dir = networking-ucsm-bm/locale
input_file = networking-ucsm-bm/locale/networking-ucsm-bm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking-ucsm-bm/locale/networking-ucsm-bm.pot
