[metadata]
name = networking-ucsm-bm
summary = Neutron ML2 driver for Cisco UCSM managing bare metal servers
description-file =
    README.rst
author = SAP SE
author-email = opensource@sap.com
home-page = http://www.sap.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_ucsm_bm

[entry_points]
console_scripts =
    neutron-cisco-ml2-ucsm-bm-agent = networking_ucsm_bm.plugins.ml2.drivers.cisco.ucsm_bm.agent:main

neutron.ml2.mechanism_drivers =
    cisco_ucsm_bm = networking_ucsm_bm.plugins.ml2.drivers.cisco.ucsm_bm.driver:CiscoUcsmBareMetalDriver

[compile_catalog]
directory = networking_ucsm_bm/locale
domain = networking_ucsm_bm

[update_catalog]
domain = networking_ucsm_bm
output_dir = networking_ucsm_bm/locale
input_file = networking_ucsm_bm/locale/networking_ucsm_bm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_ucsm_bm/locale/networking_ucsm_bm.pot
